<resources>
    <string name="app_name">CUB_TP</string>
    <string name="walking">Andar</string>
    <string name="walking_downstairs">Descer Escadas</string>
    <string name="sitting">Sentar</string>
    <string name="walking_upstairs">Subir Escadas</string>
    <string name="laying">Descansar</string>
    <string name="start_collect">Começar Recolha</string>
    <string name="stop_collect">Parar Recolha</string>
    <string name="send_data">Transferir Dados</string>
    <string name="auto_mode">Modo Automático</string>
    <string name="see_on_maps">Ver no Google Maps</string>
    <string name="permissions_denied">Permissões Recusadas</string>
    <string name="permissions_denied_desc">É necessário aceitar as permissões de GPS e armazenamento para poder usar a aplicação. A app vai ser encerrada.</string>
    <string name="server_wrong_data_title">Dados Servidor Errados</string>
    <string name="server_worng_data_desc">Tem de definir os dados do servidor corretamente no ficheiro</string>
    <string name="download_model">Download Model</string>
</resources>
