<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton android:id="@+id/rb_walking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/walking" />
        <RadioButton android:id="@+id/rb_walking_downstairs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/walking_downstairs" />
        <RadioButton android:id="@+id/sitting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sitting" />
        <RadioButton android:id="@+id/walking_upstairs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/walking_upstairs" />
        <RadioButton android:id="@+id/laying"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/laying" />
    </RadioGroup>

</android.support.constraint.ConstraintLayout>